assignments/PA3/cool.output
Terminals unused in grammar

   ERROR


State 122 conflicts: 9 shift/reduce
State 134 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    6 feature_list: %empty
    7             | no_empty_feature_list

    8 no_empty_feature_list: feature ';'
    9                      | feature ';' no_empty_feature_list

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}'
   11        | OBJECTID ':' TYPEID ASSIGN expression
   12        | OBJECTID ':' TYPEID

   13 formal_list: %empty
   14            | no_empty_formal_list

   15 no_empty_formal_list: formal ',' no_empty_formal_list
   16                     | formal

   17 formal: OBJECTID ':' TYPEID

   18 expression_list: %empty
   19                | no_empty_expression_list

   20 no_empty_expression_list: expression
   21                         | expression ',' no_empty_expression_list

   22 block_expression_list: expression ';'
   23                      | expression ';' block_expression_list

   24 let_list: OBJECTID ':' TYPEID IN expression
   25         | OBJECTID ':' TYPEID ASSIGN expression IN expression
   26         | OBJECTID ':' TYPEID ',' let_list
   27         | OBJECTID ':' TYPEID ASSIGN expression ',' let_list

   28 case_list: case
   29          | case ';' case_list

   30 case: OBJECTID ':' TYPEID DARROW expression

   31 expression: OBJECTID ASSIGN expression
   32           | expression '.' OBJECTID '(' expression_list ')'
   33           | expression '@' TYPEID '.' OBJECTID '(' expression_list ')'
   34           | OBJECTID '(' expression_list ')'
   35           | IF expression THEN expression ELSE expression FI
   36           | WHILE expression LOOP expression POOL
   37           | '{' block_expression_list '}'
   38           | LET let_list
   39           | CASE expression OF case_list ESAC
   40           | NEW TYPEID
   41           | ISVOID expression
   42           | expression '+' expression
   43           | expression '-' expression
   44           | expression '*' expression
   45           | expression '/' expression
   46           | '~' expression
   47           | expression '<' expression
   48           | expression '=' expression
   49           | expression LE expression
   50           | NOT expression
   51           | '(' expression ')'
   52           | OBJECTID
   53           | INT_CONST
   54           | STR_CONST
   55           | BOOL_CONST


Terminals, with rules where they appear

$end (0) 0
'(' (40) 10 32 33 34 51
')' (41) 10 32 33 34 51
'*' (42) 44
'+' (43) 42
',' (44) 15 21 26 27
'-' (45) 43
'.' (46) 32 33
'/' (47) 45
':' (58) 10 11 12 17 24 25 26 27 30
';' (59) 4 5 8 9 22 23 29
'<' (60) 47
'=' (61) 48
'@' (64) 33
'{' (123) 4 5 10 37
'}' (125) 4 5 10 37
'~' (126) 46
error (256)
CLASS (258) 4 5
ELSE (259) 35
FI (260) 35
IF (261) 35
IN (262) 24 25
INHERITS (263) 5
LET (264) 38
LOOP (265) 36
POOL (266) 36
THEN (267) 35
WHILE (268) 36
CASE (269) 39
ESAC (270) 39
OF (271) 39
DARROW (272) 30
NEW (273) 40
ISVOID (274) 41
STR_CONST (275) 54
INT_CONST (276) 53
BOOL_CONST (277) 55
TYPEID (278) 4 5 10 11 12 17 24 25 26 27 30 33 40
OBJECTID (279) 10 11 12 17 24 25 26 27 30 31 32 33 34 52
ASSIGN (280) 11 25 27 31
NOT (281) 50
LE (282) 49
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3, on right: 1 3
class (48)
    on left: 4 5, on right: 2 3
feature_list (49)
    on left: 6 7, on right: 4 5
no_empty_feature_list (50)
    on left: 8 9, on right: 7 9
feature (51)
    on left: 10 11 12, on right: 8 9
formal_list (52)
    on left: 13 14, on right: 10
no_empty_formal_list (53)
    on left: 15 16, on right: 14 15
formal (54)
    on left: 17, on right: 15 16
expression_list (55)
    on left: 18 19, on right: 32 33 34
no_empty_expression_list (56)
    on left: 20 21, on right: 19 21
block_expression_list (57)
    on left: 22 23, on right: 23 37
let_list (58)
    on left: 24 25 26 27, on right: 26 27 38
case_list (59)
    on left: 28 29, on right: 29 39
case (60)
    on left: 30, on right: 28 29
expression (61)
    on left: 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48
    49 50 51 52 53 54 55, on right: 10 11 20 21 22 23 24 25 27 30 31
    32 33 35 36 39 41 42 43 44 45 46 47 48 49 50 51


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 7


State 4

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 5

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 8
    '{'       shift, and go to state 9


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 8

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 10


State 9

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    OBJECTID  shift, and go to state 11

    $default  reduce using rule 6 (feature_list)

    feature_list           go to state 12
    no_empty_feature_list  go to state 13
    feature                go to state 14


State 10

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 15


State 11

   10 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expression '}'
   11        | OBJECTID . ':' TYPEID ASSIGN expression
   12        | OBJECTID . ':' TYPEID

    '('  shift, and go to state 16
    ':'  shift, and go to state 17


State 12

    4 class: CLASS TYPEID '{' feature_list . '}' ';'

    '}'  shift, and go to state 18


State 13

    7 feature_list: no_empty_feature_list .

    $default  reduce using rule 7 (feature_list)


State 14

    8 no_empty_feature_list: feature . ';'
    9                      | feature . ';' no_empty_feature_list

    ';'  shift, and go to state 19


State 15

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    OBJECTID  shift, and go to state 11

    $default  reduce using rule 6 (feature_list)

    feature_list           go to state 20
    no_empty_feature_list  go to state 13
    feature                go to state 14


State 16

   10 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expression '}'

    OBJECTID  shift, and go to state 21

    $default  reduce using rule 13 (formal_list)

    formal_list           go to state 22
    no_empty_formal_list  go to state 23
    formal                go to state 24


State 17

   11 feature: OBJECTID ':' . TYPEID ASSIGN expression
   12        | OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 25


State 18

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 26


State 19

    8 no_empty_feature_list: feature ';' .
    9                      | feature ';' . no_empty_feature_list

    OBJECTID  shift, and go to state 11

    $default  reduce using rule 8 (no_empty_feature_list)

    no_empty_feature_list  go to state 27
    feature                go to state 14


State 20

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'

    '}'  shift, and go to state 28


State 21

   17 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 29


State 22

   10 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expression '}'

    ')'  shift, and go to state 30


State 23

   14 formal_list: no_empty_formal_list .

    $default  reduce using rule 14 (formal_list)


State 24

   15 no_empty_formal_list: formal . ',' no_empty_formal_list
   16                     | formal .

    ','  shift, and go to state 31

    $default  reduce using rule 16 (no_empty_formal_list)


State 25

   11 feature: OBJECTID ':' TYPEID . ASSIGN expression
   12        | OBJECTID ':' TYPEID .

    ASSIGN  shift, and go to state 32

    $default  reduce using rule 12 (feature)


State 26

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 27

    9 no_empty_feature_list: feature ';' no_empty_feature_list .

    $default  reduce using rule 9 (no_empty_feature_list)


State 28

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 33


State 29

   17 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 34


State 30

   10 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expression '}'

    ':'  shift, and go to state 35


State 31

   15 no_empty_formal_list: formal ',' . no_empty_formal_list

    OBJECTID  shift, and go to state 21

    no_empty_formal_list  go to state 36
    formal                go to state 24


State 32

   11 feature: OBJECTID ':' TYPEID ASSIGN . expression

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 51


State 33

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 34

   17 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 17 (formal)


State 35

   10 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expression '}'

    TYPEID  shift, and go to state 52


State 36

   15 no_empty_formal_list: formal ',' no_empty_formal_list .

    $default  reduce using rule 15 (no_empty_formal_list)


State 37

   35 expression: IF . expression THEN expression ELSE expression FI

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 53


State 38

   38 expression: LET . let_list

    OBJECTID  shift, and go to state 54

    let_list  go to state 55


State 39

   36 expression: WHILE . expression LOOP expression POOL

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 56


State 40

   39 expression: CASE . expression OF case_list ESAC

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 57


State 41

   40 expression: NEW . TYPEID

    TYPEID  shift, and go to state 58


State 42

   41 expression: ISVOID . expression

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 59


State 43

   54 expression: STR_CONST .

    $default  reduce using rule 54 (expression)


State 44

   53 expression: INT_CONST .

    $default  reduce using rule 53 (expression)


State 45

   55 expression: BOOL_CONST .

    $default  reduce using rule 55 (expression)


State 46

   31 expression: OBJECTID . ASSIGN expression
   34           | OBJECTID . '(' expression_list ')'
   52           | OBJECTID .

    ASSIGN  shift, and go to state 60
    '('     shift, and go to state 61

    $default  reduce using rule 52 (expression)


State 47

   50 expression: NOT . expression

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 62


State 48

   46 expression: '~' . expression

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 63


State 49

   37 expression: '{' . block_expression_list '}'

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    block_expression_list  go to state 64
    expression             go to state 65


State 50

   51 expression: '(' . expression ')'

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 66


State 51

   11 feature: OBJECTID ':' TYPEID ASSIGN expression .
   32 expression: expression . '.' OBJECTID '(' expression_list ')'
   33           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   42           | expression . '+' expression
   43           | expression . '-' expression
   44           | expression . '*' expression
   45           | expression . '/' expression
   47           | expression . '<' expression
   48           | expression . '=' expression
   49           | expression . LE expression

    LE   shift, and go to state 67
    '<'  shift, and go to state 68
    '='  shift, and go to state 69
    '+'  shift, and go to state 70
    '-'  shift, and go to state 71
    '*'  shift, and go to state 72
    '/'  shift, and go to state 73
    '@'  shift, and go to state 74
    '.'  shift, and go to state 75

    $default  reduce using rule 11 (feature)


State 52

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expression '}'

    '{'  shift, and go to state 76


State 53

   32 expression: expression . '.' OBJECTID '(' expression_list ')'
   33           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   35           | IF expression . THEN expression ELSE expression FI
   42           | expression . '+' expression
   43           | expression . '-' expression
   44           | expression . '*' expression
   45           | expression . '/' expression
   47           | expression . '<' expression
   48           | expression . '=' expression
   49           | expression . LE expression

    THEN  shift, and go to state 77
    LE    shift, and go to state 67
    '<'   shift, and go to state 68
    '='   shift, and go to state 69
    '+'   shift, and go to state 70
    '-'   shift, and go to state 71
    '*'   shift, and go to state 72
    '/'   shift, and go to state 73
    '@'   shift, and go to state 74
    '.'   shift, and go to state 75


State 54

   24 let_list: OBJECTID . ':' TYPEID IN expression
   25         | OBJECTID . ':' TYPEID ASSIGN expression IN expression
   26         | OBJECTID . ':' TYPEID ',' let_list
   27         | OBJECTID . ':' TYPEID ASSIGN expression ',' let_list

    ':'  shift, and go to state 78


State 55

   38 expression: LET let_list .

    $default  reduce using rule 38 (expression)


State 56

   32 expression: expression . '.' OBJECTID '(' expression_list ')'
   33           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   36           | WHILE expression . LOOP expression POOL
   42           | expression . '+' expression
   43           | expression . '-' expression
   44           | expression . '*' expression
   45           | expression . '/' expression
   47           | expression . '<' expression
   48           | expression . '=' expression
   49           | expression . LE expression

    LOOP  shift, and go to state 79
    LE    shift, and go to state 67
    '<'   shift, and go to state 68
    '='   shift, and go to state 69
    '+'   shift, and go to state 70
    '-'   shift, and go to state 71
    '*'   shift, and go to state 72
    '/'   shift, and go to state 73
    '@'   shift, and go to state 74
    '.'   shift, and go to state 75


State 57

   32 expression: expression . '.' OBJECTID '(' expression_list ')'
   33           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   39           | CASE expression . OF case_list ESAC
   42           | expression . '+' expression
   43           | expression . '-' expression
   44           | expression . '*' expression
   45           | expression . '/' expression
   47           | expression . '<' expression
   48           | expression . '=' expression
   49           | expression . LE expression

    OF   shift, and go to state 80
    LE   shift, and go to state 67
    '<'  shift, and go to state 68
    '='  shift, and go to state 69
    '+'  shift, and go to state 70
    '-'  shift, and go to state 71
    '*'  shift, and go to state 72
    '/'  shift, and go to state 73
    '@'  shift, and go to state 74
    '.'  shift, and go to state 75


State 58

   40 expression: NEW TYPEID .

    $default  reduce using rule 40 (expression)


State 59

   32 expression: expression . '.' OBJECTID '(' expression_list ')'
   33           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   41           | ISVOID expression .
   42           | expression . '+' expression
   43           | expression . '-' expression
   44           | expression . '*' expression
   45           | expression . '/' expression
   47           | expression . '<' expression
   48           | expression . '=' expression
   49           | expression . LE expression

    '@'  shift, and go to state 74
    '.'  shift, and go to state 75

    $default  reduce using rule 41 (expression)


State 60

   31 expression: OBJECTID ASSIGN . expression

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 81


State 61

   34 expression: OBJECTID '(' . expression_list ')'

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    $default  reduce using rule 18 (expression_list)

    expression_list           go to state 82
    no_empty_expression_list  go to state 83
    expression                go to state 84


State 62

   32 expression: expression . '.' OBJECTID '(' expression_list ')'
   33           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   42           | expression . '+' expression
   43           | expression . '-' expression
   44           | expression . '*' expression
   45           | expression . '/' expression
   47           | expression . '<' expression
   48           | expression . '=' expression
   49           | expression . LE expression
   50           | NOT expression .

    LE   shift, and go to state 67
    '<'  shift, and go to state 68
    '='  shift, and go to state 69
    '+'  shift, and go to state 70
    '-'  shift, and go to state 71
    '*'  shift, and go to state 72
    '/'  shift, and go to state 73
    '@'  shift, and go to state 74
    '.'  shift, and go to state 75

    $default  reduce using rule 50 (expression)


State 63

   32 expression: expression . '.' OBJECTID '(' expression_list ')'
   33           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   42           | expression . '+' expression
   43           | expression . '-' expression
   44           | expression . '*' expression
   45           | expression . '/' expression
   46           | '~' expression .
   47           | expression . '<' expression
   48           | expression . '=' expression
   49           | expression . LE expression

    '@'  shift, and go to state 74
    '.'  shift, and go to state 75

    $default  reduce using rule 46 (expression)


State 64

   37 expression: '{' block_expression_list . '}'

    '}'  shift, and go to state 85


State 65

   22 block_expression_list: expression . ';'
   23                      | expression . ';' block_expression_list
   32 expression: expression . '.' OBJECTID '(' expression_list ')'
   33           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   42           | expression . '+' expression
   43           | expression . '-' expression
   44           | expression . '*' expression
   45           | expression . '/' expression
   47           | expression . '<' expression
   48           | expression . '=' expression
   49           | expression . LE expression

    LE   shift, and go to state 67
    '<'  shift, and go to state 68
    '='  shift, and go to state 69
    '+'  shift, and go to state 70
    '-'  shift, and go to state 71
    '*'  shift, and go to state 72
    '/'  shift, and go to state 73
    '@'  shift, and go to state 74
    '.'  shift, and go to state 75
    ';'  shift, and go to state 86


State 66

   32 expression: expression . '.' OBJECTID '(' expression_list ')'
   33           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   42           | expression . '+' expression
   43           | expression . '-' expression
   44           | expression . '*' expression
   45           | expression . '/' expression
   47           | expression . '<' expression
   48           | expression . '=' expression
   49           | expression . LE expression
   51           | '(' expression . ')'

    LE   shift, and go to state 67
    '<'  shift, and go to state 68
    '='  shift, and go to state 69
    '+'  shift, and go to state 70
    '-'  shift, and go to state 71
    '*'  shift, and go to state 72
    '/'  shift, and go to state 73
    '@'  shift, and go to state 74
    '.'  shift, and go to state 75
    ')'  shift, and go to state 87


State 67

   49 expression: expression LE . expression

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 88


State 68

   47 expression: expression '<' . expression

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 89


State 69

   48 expression: expression '=' . expression

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 90


State 70

   42 expression: expression '+' . expression

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 91


State 71

   43 expression: expression '-' . expression

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 92


State 72

   44 expression: expression '*' . expression

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 93


State 73

   45 expression: expression '/' . expression

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 94


State 74

   33 expression: expression '@' . TYPEID '.' OBJECTID '(' expression_list ')'

    TYPEID  shift, and go to state 95


State 75

   32 expression: expression '.' . OBJECTID '(' expression_list ')'

    OBJECTID  shift, and go to state 96


State 76

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' . expression '}'

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 97


State 77

   35 expression: IF expression THEN . expression ELSE expression FI

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 98


State 78

   24 let_list: OBJECTID ':' . TYPEID IN expression
   25         | OBJECTID ':' . TYPEID ASSIGN expression IN expression
   26         | OBJECTID ':' . TYPEID ',' let_list
   27         | OBJECTID ':' . TYPEID ASSIGN expression ',' let_list

    TYPEID  shift, and go to state 99


State 79

   36 expression: WHILE expression LOOP . expression POOL

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 100


State 80

   39 expression: CASE expression OF . case_list ESAC

    OBJECTID  shift, and go to state 101

    case_list  go to state 102
    case       go to state 103


State 81

   31 expression: OBJECTID ASSIGN expression .
   32           | expression . '.' OBJECTID '(' expression_list ')'
   33           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   42           | expression . '+' expression
   43           | expression . '-' expression
   44           | expression . '*' expression
   45           | expression . '/' expression
   47           | expression . '<' expression
   48           | expression . '=' expression
   49           | expression . LE expression

    LE   shift, and go to state 67
    '<'  shift, and go to state 68
    '='  shift, and go to state 69
    '+'  shift, and go to state 70
    '-'  shift, and go to state 71
    '*'  shift, and go to state 72
    '/'  shift, and go to state 73
    '@'  shift, and go to state 74
    '.'  shift, and go to state 75

    $default  reduce using rule 31 (expression)


State 82

   34 expression: OBJECTID '(' expression_list . ')'

    ')'  shift, and go to state 104


State 83

   19 expression_list: no_empty_expression_list .

    $default  reduce using rule 19 (expression_list)


State 84

   20 no_empty_expression_list: expression .
   21                         | expression . ',' no_empty_expression_list
   32 expression: expression . '.' OBJECTID '(' expression_list ')'
   33           | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   42           | expression . '+' expression
   43           | expression . '-' expression
   44           | expression . '*' expression
   45           | expression . '/' expression
   47           | expression . '<' expression
   48           | expression . '=' expression
   49           | expression . LE expression

    LE   shift, and go to state 67
    '<'  shift, and go to state 68
    '='  shift, and go to state 69
    '+'  shift, and go to state 70
    '-'  shift, and go to state 71
    '*'  shift, and go to state 72
    '/'  shift, and go to state 73
    '@'  shift, and go to state 74
    '.'  shift, and go to state 75
    ','  shift, and go to state 105

    $default  reduce using rule 20 (no_empty_expression_list)


State 85

   37 expression: '{' block_expression_list '}' .

    $default  reduce using rule 37 (expression)


State 86

   22 block_expression_list: expression ';' .
   23                      | expression ';' . block_expression_list

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    $default  reduce using rule 22 (block_expression_list)

    block_expression_list  go to state 106
    expression             go to state 65


State 87

   51 expression: '(' expression ')' .

    $default  reduce using rule 51 (expression)


State 88
